<resources>
    <string name="app_name">movie4k</string>
    <string name="movie_hint">Оставьте свой отзыв</string>
    <string name="movie_feedback">Рецензии</string>
    <string name="movie_like">Лайк</string>
    <string name="movie_schedule">Watch later</string>
    <string name="share">Поделиться</string>
    <string name="movie_image">Обложка фильма</string>
    <string name="custom_dialog_title">Внимание</string>
    <string name="custom_dialog_warning_text">Вы действительно хотите выйти и завершить работу с каталогом фильмов?</string>
    <string name="submit">Да</string>
    <string name="cancel">Нет</string>
    <string name="night_theme">Ночная тема</string>
    <string name="favorite">Избранное</string>
    <string name="empty_list_text">Список любимых фильмов пуст</string>
    <string name="empty_favorite_icon">Иконка для пустого спика</string>
    <string name="delete_message">Запись удалена</string>
    <string name="repeat_message">Повторить запрос</string>
    <string name="revert_delete_message">Отменить</string>
    <string name="movie_list">КиноПоиск</string>
    <string name="theme">Тема</string>
    <string name="schedule">Посмотреть позже</string>
    <string name="edit_icon">Редактирование времении напоминания</string>
    <string name="search">Поиск фильмов</string>
</resources>