<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"
            android:padding="4dp"
            android:scaleType="centerInside"
            tool:src="@drawable/image_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                tool:text="Один" />

            <ImageView
                android:id="@+id/movie_share_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:contentDescription="@string/share"
                android:padding="2dp"
                android:onClick="shareMovieClick"
                android:src="@drawable/ic_action_name_link" />

            <ImageView
                android:id="@+id/movie_like"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:contentDescription="@string/movie_like"
                android:padding="4dp"
                android:onClick="likeClick"
                android:src="@drawable/ic_action_name" />
        </LinearLayout>

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            tool:text="Один ушлый американец ещё со студенческих лет приторговывал наркотиками, а теперь придумал схему нелегального обогащения с использованием поместий обедневшей английской аристократии и очень неплохо на этом разбогател. Другой пронырливый журналист приходит к Рэю, правой руке американца, и предлагает тому купить киносценарий, в котором подробно описаны преступления его босса при участии других представителей лондонского криминального мира — партнёра-еврея, китайской диаспоры, чернокожих спортсменов и даже русского олигарха." />

        <TextView
            android:id="@+id/movie_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_feedback"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/movie_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="no"
            android:hint="@string/movie_hint"
            android:inputType="textAutoCorrect"
            android:textSize="14sp"
            tool:text="sdfdsfsfdsfaaaa" />
    </LinearLayout>
</ScrollView>