<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_image"

                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_title"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tool:text="Один" />

                <ImageView
                    android:id="@+id/movie_share_friend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:contentDescription="@string/share"
                    android:padding="4dp"
                    android:src="@drawable/ic_share" />

                <ImageView
                    android:id="@+id/movie_like"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:contentDescription="@string/movie_like"
                    android:padding="4dp"
                    android:src="@drawable/ic_like" />
            </LinearLayout>

            <TextView
                android:id="@+id/movie_description"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:textAlignment="gravity"
                tool:text="Один ушлый американец ещё со студенческих лет приторговывал наркотиками,
            а теперь придумал схему нелегального обогащения с использованием поместий
            обедневшей английской аристократии и очень неплохо на этом разбогател.
            Другой пронырливый журналист приходит к Рэю, правой руке американца, и предлагает тому
            купить киносценарий, в котором подробно описаны преступления его босса при участии
            других представителей лондонского криминального мира — партнёра-еврея,
            китайской диаспоры, чернокожих спортсменов и даже русского олигарха." />

            <TextView
                android:id="@+id/movie_comments"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/movie_feedback"
                android:textAlignment="gravity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/movie_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:autofillHints="no"
                android:hint="@string/movie_hint"
                android:inputType="textAutoCorrect"
                android:textSize="14sp"
                tool:text="sdfdsfsfdsfaaaa" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>